Prepare for Java 14 und SpringBoot 2.4.5