@@ -11,7 +11,7 @@
     </parent>
     <groupId>org.openwms</groupId>
     <artifactId>org.openwms.parent</artifactId>
-    <version>19.1</version>
+    <version>20</version>
     <packaging>pom</packaging>
     <name>OpenWMS.org Parent Project</name>
     <description>OpenWMS.org is an open source warehouse management software</description>
@@ -514,6 +514,7 @@
     <properties>
         <!-- used by surefire plugin in combination with jacoco -->
         <argLine><![CDATA[-Dcatalina.base=${project.build.directory}
+        --enable-preview
         --illegal-access=permit
         -Dorg.springframework.restdocs.outputDir=./target/generated-snippets
         -Ddocumentation.dir=./target
@@ -528,8 +529,10 @@
         <documentation.snippet.dir>${documentation.dir}/generated-snippets</documentation.snippet.dir>
         <documentation.input.dir>${documentation.dir}/generated-docs</documentation.input.dir>
         <documentation.output.dir>${documentation.dir}/site/rest/${project.version}</documentation.output.dir>
-        <java.version>11</java.version>
+        <java.version>14</java.version>
         <javadoc.output.dir>${project.reporting.outputDirectory}/apidocs/${project.version}</javadoc.output.dir> <!-- Javadoc plugin config -->
+        <maven.compiler.source>${java.version}</maven.compiler.source>
+        <maven.compiler.target>${java.version}</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <scmpublish.content>${project.build.directory}/site</scmpublish.content>
         <scmuser></scmuser>
@@ -540,7 +543,7 @@
         <!-- Dependency versions -->
         <ameba-lib.version>3.0-SNAPSHOT</ameba-lib.version>
         <apiguardian-api.version>1.1.0</apiguardian-api.version>
-        <archunit.version>0.14.1</archunit.version>
+        <archunit.version>0.18.0</archunit.version>
         <aspectj.version>1.9.6</aspectj.version> <!-- Keep in sync with boot -->
         <commons-collections.version>3.2.2</commons-collections.version> <!-- This is bound to Dozer / Eureka Client -->
         <dozer.version>6.5.0</dozer.version>
@@ -548,12 +551,12 @@
         <hystrix-javanica.version>1.5.18</hystrix-javanica.version> <!-- Keep in sync with spring-cloud-netflix-hystrix -->
         <junit-platform-surefire-provider.version>1.3.2</junit-platform-surefire-provider.version>
         <logstash-logback-encoder.version>6.4</logstash-logback-encoder.version>
-        <postgresql.version>42.2.18</postgresql.version> <!-- Keep in sync with Boot -->
+        <postgresql.version>42.2.19</postgresql.version> <!-- Keep in sync with Boot -->
 
-        <spring-boot.version>2.3.7.RELEASE</spring-boot.version>
-        <spring-data-envers.version>2.3.6.RELEASE</spring-data-envers.version>
+        <spring-boot.version>2.4.5</spring-boot.version>
+        <spring-data-envers.version>2.5.0</spring-data-envers.version>
         <spring-restdocs-mockmvc.version>2.0.5.RELEASE</spring-restdocs-mockmvc.version>
-        <spring-framework.version>5.2.12.RELEASE</spring-framework.version> <!-- Keep in sync with boot -->
+        <spring-framework.version>5.3.6</spring-framework.version> <!-- Keep in sync with boot -->
         <start-class></start-class> <!-- keep it empty, set by actual boot module -->
 
         <!--   Plugin versions   -->
@@ -564,7 +567,7 @@
         <git-commit-id-plugin.version>4.0.4</git-commit-id-plugin.version> <!-- Keep in sync with boot -->
         <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version> <!-- Keep in sync with boot -->
         <maven-enforcer-plugin.version>3.0.0-M3</maven-enforcer-plugin.version> <!-- Keep in sync with boot -->
-        <maven-failsafe-plugin.version>3.0.0-M5</maven-failsafe-plugin.version>
+        <maven-failsafe-plugin.version>3.0.0-M5</maven-failsafe-plugin.version> <!-- Keep in sync with boot -->
         <maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
         <maven-jar-plugin.version>3.2.0</maven-jar-plugin.version> <!-- Keep in sync with boot -->
         <maven-javadoc-plugin.version>3.2.0</maven-javadoc-plugin.version> <!-- Keep in sync with boot -->
@@ -707,7 +710,7 @@
                     <version>${jib-maven-plugin.version}</version>
                     <configuration>
                         <from>
-                            <image>adoptopenjdk/openjdk11-openj9:jre-11.0.7_10_openj9-0.20.0-alpine</image>
+                            <image>adoptopenjdk/openjdk16-openj9:jre-16_36_openj9-0.25.0-alpine</image>
                         </from>
                         <to>
                             <image>docker.io/openwms/${project.artifactId}:latest</image>
@@ -725,8 +728,14 @@
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>${maven-compiler-plugin.version}</version>
                     <configuration>
+                        <compilerArgs>
+                            <arg>--enable-preview</arg>
+                        </compilerArgs>
+                        <forceJavacCompilerUse>true</forceJavacCompilerUse>
                         <debug>${debug.info}</debug>
                         <encoding>${project.build.sourceEncoding}</encoding>
+                        <source>${java.version}</source>
+                        <target>${java.version}</target>
                         <fork>true</fork>
                         <optimize>true</optimize>
                         <parameters>true</parameters>
